# json-flattering

./: .gitignore  AUTHORS  Dockerfile  README.md  config.json  config.json.example  log.txt  main.py  nohup.out  pyproject.toml  run.sh
docker-example/: config.json  docker-compose.yml  run.sh
