[tool.poetry]
name = "json-flattering"
version = "0.1.0"
description = ""
authors = ["develpoper <developer@smartspace.it>"]

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
